version number in footer, landing page horizontal scroll fix

--- a/src/components/TickerTable/TickerTable.pcss
+++ b/src/components/TickerTable/TickerTable.pcss
@@ -89,11 +89,12 @@
     align-items: center;
     display: inline-block;
     flex-direction: column;
-    height: 100%;
+    /*height: 100%;*/
     justify-content: flex-start;
     min-width: 900px;
     overflow: auto;
     width: 100%;
+    margin-bottom: 16px;
 
     thead,
     tbody {
