--- a/src/containers/Footer/Footer.pcss
+++ b/src/containers/Footer/Footer.pcss
@@ -3,7 +3,7 @@
    position: relative;
    
   span {
-    color: var(--footer-text-color);
+    /*color: var(--footer-text-color);*/
     font-size: 10px;
     font-style: normal;
     font-weight: bold;
