--- a/src/screens/LandingScreen/LandingScreen.pcss
+++ b/src/screens/LandingScreen/LandingScreen.pcss
@@ -5,7 +5,7 @@
   height: 100%;
   justify-content: center;
   margin-top: calc(var(--gap) * -1.3);
-  width: 100vw;
+  /*width: 100vw;*/
 
   .positive {
     color: var(--system-green);
